// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridRowSizing renders 0 1`] = `
Array [
  .c0 {
  grid-row-sizing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowSizing renders function 1`] = `
Array [
  .c0 {
  grid-row-sizing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowSizing renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-row-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowSizing renders negative number 1`] = `
Array [
  .c0 {
  grid-row-sizing: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowSizing renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  grid-row-sizing: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-sizing: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-sizing: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-sizing: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-sizing: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowSizing renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-sizing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-sizing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-sizing: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-sizing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-sizing: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowSizing renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  grid-row-sizing: July;
}

@media May {
  .c0 {
    grid-row-sizing: August;
  }
}

@media April {
  .c0 {
    grid-row-sizing: September;
  }
}

@media January {
  .c0 {
    grid-row-sizing: November;
  }
}

@media April {
  .c0 {
    grid-row-sizing: August;
  }
}

@media June {
  .c0 {
    grid-row-sizing: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: July;
}

@media May {
  .c0 {
    grid-row-sizing: August;
  }
}

@media April {
  .c0 {
    grid-row-sizing: September;
  }
}

@media January {
  .c0 {
    grid-row-sizing: November;
  }
}

@media April {
  .c0 {
    grid-row-sizing: August;
  }
}

@media June {
  .c0 {
    grid-row-sizing: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-row-sizing: November;
  }
}

@media April {
  .c0 {
    grid-row-sizing: January;
  }
}

@media January {
  .c0 {
    grid-row-sizing: December;
  }
}

@media April {
  .c0 {
    grid-row-sizing: April;
  }
}

@media June {
  .c0 {
    grid-row-sizing: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-row-sizing: November;
  }
}

@media April {
  .c0 {
    grid-row-sizing: January;
  }
}

@media January {
  .c0 {
    grid-row-sizing: December;
  }
}

@media April {
  .c0 {
    grid-row-sizing: April;
  }
}

@media June {
  .c0 {
    grid-row-sizing: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowSizing renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    grid-row-sizing: July;
  }
}

@media April {
  .c0 {
    grid-row-sizing: August;
  }
}

@media January {
  .c0 {
    grid-row-sizing: September;
  }
}

@media April {
  .c0 {
    grid-row-sizing: November;
  }
}

@media June {
  .c0 {
    grid-row-sizing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-row-sizing: July;
  }
}

@media April {
  .c0 {
    grid-row-sizing: August;
  }
}

@media January {
  .c0 {
    grid-row-sizing: September;
  }
}

@media April {
  .c0 {
    grid-row-sizing: November;
  }
}

@media June {
  .c0 {
    grid-row-sizing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-row-sizing: January;
  }
}

@media April {
  .c0 {
    grid-row-sizing: December;
  }
}

@media January {
  .c0 {
    grid-row-sizing: April;
  }
}

@media April {
  .c0 {
    grid-row-sizing: May;
  }
}

@media June {
  .c0 {
    grid-row-sizing: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-row-sizing: January;
  }
}

@media April {
  .c0 {
    grid-row-sizing: December;
  }
}

@media January {
  .c0 {
    grid-row-sizing: April;
  }
}

@media April {
  .c0 {
    grid-row-sizing: May;
  }
}

@media June {
  .c0 {
    grid-row-sizing: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowSizing renders postitive number 1`] = `
Array [
  .c0 {
  grid-row-sizing: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowSizing renders string 1`] = `
Array [
  .c0 {
  grid-row-sizing: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowSizing renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`gridRowSizing renders valid theme path 1`] = `
Array [
  .c0 {
  grid-row-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
